manifests/kubernetes/argocd/ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vsrv
  namespace: argocd
spec:
  hosts:
  - "argocd.cluster.local"
  gateways:
  - istio-system/istio-system-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 443
